# pycalphad-xml

./: CHANGES.rst  LICENSE  README.md  RELEASING.rst  pyproject.toml  setup.py
.github/workflows/: deploy.yaml  tests.yaml
pycalphad_xml/: CEF.rng  __init__.py  parser.py  test_xml_parser.py
src/pycalphad_xml/: CEF.rng  MQMQA.rng  core.rng  database.rng  parser.py
tests/: test_xml_parser.py
